--- a/CSS/cart.css
+++ b/CSS/cart.css
@@ -1,4 +1,4 @@
-/* .cart{
+.cart{
     display: flex;
     margin: 0px 50px;
     justify-content: space-between;
@@ -171,4 +171,4 @@ border-radius: 5px;
 }
 
 }
- */
+
