--- a/CSS/ecommerce.css
+++ b/CSS/ecommerce.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin: 5px;
     padding: 0;
     box-sizing: border-box;
@@ -428,4 +428,4 @@ textarea{
 .logindetails .fullname{
     margin-right: 260px;
 }
-
+ */
